trybuild/fail/example.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> trybuild/fail/example.rs:1:2
  |
1 |
  |  ^ consider adding a `main` function to `$DIR/trybuild/fail/example.rs`
